# ButterUp

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  lib.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: flatpak.rs  health.rs  history.rs  lib.rs  main.rs  packagekit.rs  privileged.rs  snapd.rs  system.rs
src-tauri/tests/: smoke.rs
src/tabs/: CleanupTab.tsx  HealthTab.tsx  HistoryTab.tsx  UpdatesTab.tsx
