[package]
name = "butterup"
version = "0.1.1"
description = "One friendly place to update everything on Ubuntu and Debian"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "butterup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "5"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
